lectures/_build/html/reports/optgrowth.err.log
Traceback (most recent call last):
  File "C:\Users\chenoi\anaconda3\lib\site-packages\jupyter_cache\executors\utils.py", line 58, in single_nb_execution
    executenb(
  File "C:\Users\chenoi\anaconda3\lib\site-packages\nbclient\client.py", line 1204, in execute
    return NotebookClient(nb=nb, resources=resources, km=km, **kwargs).execute()
  File "C:\Users\chenoi\anaconda3\lib\site-packages\nbclient\util.py", line 84, in wrapped
    return just_run(coro(*args, **kwargs))
  File "C:\Users\chenoi\anaconda3\lib\site-packages\nbclient\util.py", line 62, in just_run
    return loop.run_until_complete(coro)
  File "C:\Users\chenoi\anaconda3\lib\asyncio\base_events.py", line 647, in run_until_complete
    return future.result()
  File "C:\Users\chenoi\anaconda3\lib\site-packages\nbclient\client.py", line 663, in async_execute
    await self.async_execute_cell(
  File "C:\Users\chenoi\anaconda3\lib\site-packages\nbclient\client.py", line 965, in async_execute_cell
    await self._check_raise_for_error(cell, cell_index, exec_reply)
  File "C:\Users\chenoi\anaconda3\lib\site-packages\nbclient\client.py", line 862, in _check_raise_for_error
    raise CellExecutionError.from_cell_and_msg(cell, exec_reply_content)
nbclient.exceptions.CellExecutionError: An error occurred while executing the following cell:
------------------

def v_star(y, ÃÂ±, ÃÂ², ÃÂ¼):
    """
    True value function
    """
    c1 = np.log(1 - ÃÂ± * ÃÂ²) / (1 - ÃÂ²)
    c2 = (ÃÂ¼ + ÃÂ± * np.log(ÃÂ± * ÃÂ²)) / (1 - ÃÂ±)
    c3 = 1 / (1 - ÃÂ²)
    c4 = 1 / (1 - ÃÂ± * ÃÂ²)
    return c1 + c2 * (c3 - c4) + c4 * np.log(y)

def ÃÆ’_star(y, ÃÂ±, ÃÂ²):
    """
    True optimal policy
    """
    return (1 - ÃÂ± * ÃÂ²) * y


------------------

[1;36m  File [1;32m"C:\Users\chenoi\AppData\Local\Temp\ipykernel_10132\68666521.py"[1;36m, line [1;32m1[0m
[1;33m    def v_star(y, ÃÂ±, ÃÂ², ÃÂ¼):[0m
[1;37m                   ^[0m
[1;31mSyntaxError[0m[1;31m:[0m invalid character 'Â±' (U+00B1)

SyntaxError: invalid character 'Â±' (U+00B1) (68666521.py, line 1)

